# ConsoleShop

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Console/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py  yasg.py
cart/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_rename_users_cart_user.py
contact/: admin.py  models.py  serializers.py  urls.py  views.py
contact/migrations/: 0001_initial.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx
nginx/: Dockerfile  nginx.conf.template
order/: admin.py  models.py  serializers.py  urls.py  views.py
shop/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_category_image.py  0003_category_count_products.py  0004_feature_product_productrating.py  0005_alter_product_features_alter_feature_unique_together.py  0006_alter_product_features.py  0007_cart.py  0008_delete_cart.py
shop/views_all/: views_category.py  views_feature.py  views_product.py  views_rating_review.py
users/: admin.py  models.py  serializers.py  signals.py  swagger_schemas.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/email/: password_reset_email.html
users/templates/users/: email_confirmation.html
utils/: database_conf.py  email_confirmation.py  permissions.py  return_cart.py  return_order.py  token_generator.py  utils.py  validators.py
