[tool.poetry]
name = "console"
version = "0.1.0"
description = ""
authors = ["Yaroslav <yar1k_k12@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
drf-yasg = "^1.21.7"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
